<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:title="@string/active_chat"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_chat_24"
        android:id="@+id/active_chat_option"/>
    <item
        android:title="@string/my_profile"
        app:showAsAction="ifRoom"
        android:icon="@drawable/my_profile"
        android:id="@+id/my_profile_option"/>
    <item
        android:title="@string/about_app"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_info_24"
        android:id="@+id/about_app_option"/>
    <item
        android:title="@string/delivery_requests"
        app:showAsAction="ifRoom"
        android:icon="@drawable/order_request" />

</menu>