<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_bottom_updates"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">


    <TextView
        android:id="@+id/menu_bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawablePadding="12dp"
        android:fontFamily="sans-serif-thin"
        android:padding="8dp"
        android:text="@string/view_in_detail"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/buy_services" />

    <TextView
        android:id="@+id/menu_bottom_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawablePadding="12dp"
        android:fontFamily="sans-serif-thin"
        android:padding="8dp"
        android:text="@string/edit_menu"
        android:textColor="@color/black"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_baseline_edit_24" />

    <TextView
        android:id="@+id/menu_bottom_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawablePadding="12dp"
        android:fontFamily="sans-serif-thin"
        android:padding="8dp"
        android:text="@string/delete_menu"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_baseline_delete_outline_24" />

</LinearLayout>