<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".AccountSetupActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/setup_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/my_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/uploadImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/upload_profile_image"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/email_ip_frame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/setup_image_view"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_ip_frame"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="UserName"
            app:helperText="@string/user_name_guideline"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/setup_image_view"
            app:startIconDrawable="@drawable/my_profile">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setup_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bio_ip_frame"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="Bio"
            app:helperText="Required"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_ip_frame"
            app:startIconDrawable="@drawable/ic_baseline_edit_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setup_userBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/desc_ip_frame"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/short_description_of_yours"
            app:helperText="Required"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/red"
            app:counterEnabled="true"
            app:counterMaxLength="500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bio_ip_frame">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setup_userDesc"
                android:layout_width="match_parent"
                android:maxWidth="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_ip_frame"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/mobile_no_placeholder"
            app:counterMaxLength="10"
            app:helperText="Required"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/desc_ip_frame"
            app:prefixText="+91"
            app:prefixTextColor="#14282C"
            app:startIconDrawable="@drawable/contact_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setup_userPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="10" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/setup_accountBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_account"
            app:layout_constraintTop_toBottomOf="@+id/phone_ip_frame"
            tools:layout_editor_absoluteX="10dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>